--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,10 @@ client/node_modules
 .env.test.local
 .env.production.local
 .idea
-server/config.js
+server/config/dev.js
 
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
