--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "packShakedown_server",
+  "name": "bagly_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.8.1",
+    "npm": "5.4.2"
+  },
   "scripts": {
     "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'",
-    "start": "nodemon --exec"
+    "dev": "NODE_ENV=dev nodemon --exec"
   },
   "author": "",
   "license": "ISC",
