--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'",
-    "dev": "NODE_ENV=dev nodemon --exec"
+    "dev": "NODE_ENV=dev nodemon --exec",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
